--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 .DS_Store
 bem-bl
-bl-core-bemhtml
+bemhtml
+bootstrap-bl
 node_modules
 .bem/cache
-pages-desktop/*/*.*
-!pages-desktop/*/*.bemjson.js
-!pages-desktop/.bem/level.js
+desktop.bundles/*/*.*
+!desktop.bundles/*/*.bemjson.js
+!desktop.bundles/.bem/level.js
